Fix home-icon horizontal alignment

--- a/css/theme.css
+++ b/css/theme.css
@@ -4560,7 +4560,7 @@ div.now-playing-add span.link:hover {
     height: 30px!important;
     background-size: 30px 30px!important;
     position: relative;
-    margin-left: 10px;
+    margin-left: 6px;
     margin-top: 5px;
     padding-left:0px;
 }
